--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+
 body {
   padding: 0;
   margin: 0;
@@ -7,4 +8,19 @@ body {
 body,
 html {
   height: 100%;
+}
+
+/* style the legend */
+.legend {
+  line-height: 18px;
+  color: #555;
+  background: white;
+  padding: 8px
+}
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
 }
